SOC-2789 | fix: center edit categories label on mobile

--- a/front/main/app/styles/component/_discussion-categories-edit.scss
+++ b/front/main/app/styles/component/_discussion-categories-edit.scss
@@ -231,6 +231,10 @@ $success-icon-size: 80px;
 		margin: 0;
 	}
 
+	.icon-close {
+		width: 35px;
+	}
+
 	.icon-submit {
 		height: 35px;
 		width: 35px;
